--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
-    <meta property="og:url" content="https://forkdelta.app" />
-    <meta property="og:title" content="ForkDelta | Decentralized Ethereum Token Exchange" />
-    <meta property="og:description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://forkdelta.app/images/logo.png" />
+    <meta property="og:url" content="https://bluezakex.store" />
+    <meta property="og:title" content="BlueZakex | Decentralized Ethereum Token Exchange" />
+    <meta property="og:description" content="BlueZakex is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:image" content="https://forkdelta.app/images/title.png" />
 
-    <title>ForkDelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="ForkDelta is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>BlueZakex | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="BlueZakex is a decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
     <meta name="twitter:widgets:autoload" content="off">
   </head>
 
@@ -45,7 +45,7 @@
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          	<li><a href="/about/"><i class="fa fa-info-circle"></i> About ForkDelta</a></li>
+          	<li><a href="/about/"><i class="fa fa-info-circle"></i> About BlueZakex</a></li>
           	<li class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
             <li class="hidden-xs hidden-sm dropdown" id="connection"></li>
@@ -56,9 +56,9 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="alert alert-warning text-center" role="alert" style="border-radius:0;margin-bottom:0;">
-      Please contribute to support continued operation of ForkDelta. September funding target: 1,000 DAI.
+      Please contribute to support operation of BlueZakex. December funding target: 2,000,000,000 BUZ.
       <div class="visible-xs-block visible-md-inline">
-        <a href="https://etherscan.io/address/0x4489F77FB33E194995142a872EcD85CbD6F0f193" target="_blank" style="font-weight:bolder;">Contribute now!</a>
+        <a href="https://etherscan.io/address/0x2a212807e7Afb015CfF3872Edf7a99e248EBa62f" target="_blank" style="font-weight:bolder;">Contribute now!</a>
         <a href="https://www.reddit.com/r/ForkDelta/comments/cxutjj/support_forkdelta/">Read more</a>
       </div>
     </div>
@@ -122,13 +122,13 @@
                   <div role="tabpanel" class="tab-pane active" id="important">
                     <div style="margin: 12px;">
                       <p>
-                        <a href="https://t.me/ForkDeltaChat" target="_blank"><img alt="Chat on Telegram" src="https://img.shields.io/badge/chat-on%20Telegram-0088cc.svg" /></a>
+                        <a href="https://t.me/bluezakex" target="_blank"><img alt="Chat on Telegram" src="https://img.shields.io/badge/chat-on%20Telegram-0088cc.svg" /></a>
                         <a href="https://discord.gg/mMnRq7m" target="_blank"><img alt="Chat on Discord" src="https://img.shields.io/badge/chat-on%20discord-7289da.svg" /></a>
                         <a href="https://www.reddit.com/r/ForkDelta" target="_blank"><img alt="Join us on Reddit" src="https://img.shields.io/badge/reddit-ForkDelta-red.svg" /></a>
                       </p>
                       <p style="color: #f00; font-weight: bold;">URL & Status</p>
                       <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://forkdelta.app">forkdelta.app</a>. Bookmark it once and use the bookmark.
+                        The URL of this project is <a href="https://bluezakex.store">forkdelta.app</a>. Bookmark it once and use the bookmark.
                       </p>
                       <p style="font-size: 12px;">
                         This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a> with a ton of improvements including a much faster order processing system.
@@ -138,19 +138,19 @@
                       <p style="font-size: 12px;">
                         <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. ForkDelta cannot help you with funds incorrectly deposited to the trading smart contract.
                       </p>
-                      <p style="color: #f00; font-weight: bold;">ForkDelta Disclaimer</p>
+                      <p style="color: #f00; font-weight: bold;">Bluezakex Disclaimer</p>
                       <p style="font-size: 12px;">
-                        ForkDelta is a decentralized trading platform that lets
+                        BlueZakex is a decentralized trading platform that lets
                         you trade Ether and Ethereum-based tokens directly with other users.
                         You are responsible for your own account, funds, and private keys.
                         You are responsible for your own trading decisions, and the details
                         and mechanics of the tokens you trade.
-                        ForkDelta is not responsible for your decisions, actions, or losses that result from
-                        using ForkDelta. ForkDelta makes no guarantee about the tokens that you trade using
-                        ForkDelta. ForkDelta does not hold your funds and does not offer refunds.
-                        While the information contained on ForkDelta is periodically updated, no guarantee is given
-                        that the information provided on ForkDelta is correct, complete, or up-to-date.
-                        By using ForkDelta, you acknowledge this and agree to these terms.
+                        BlueZakex is not responsible for your decisions, actions, or losses that result from
+                        using BlueZakex. BlueZakex makes no guarantee about the tokens that you trade using
+                        BlueZakex. BlueZakex does not hold your funds and does not offer refunds.
+                        While the information contained on BlueZakex is periodically updated, no guarantee is given
+                        that the information provided on BlueZakex is correct, complete, or up-to-date.
+                        By using BlueZakex, you acknowledge this and agree to these terms.
                       </p>
                     </div>
                   </div>
@@ -229,7 +229,7 @@
         twttr.widgets.createTimeline(
           {
             sourceType: 'profile',
-            screenName: 'ForkDelta'
+            screenName: 'BlueZakex'
           },
           document.getElementById('updates'),
           {
